# cpp-template

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
src/rendering/: app.cpp  app.h  camera.cpp  mesh.cpp  mesh.h  object.cpp  object.h
src/shaders/: fs.glsl  vs.glsl
